--- a/frontend/src/app/create-user/create-user.component.html
+++ b/frontend/src/app/create-user/create-user.component.html
@@ -7,7 +7,7 @@
     </div>
     <div class="input">
       <label for="email">Email:</label>
-      <input type="email" [(ngModel)]="userData.email" name="email" placeholder="email2email.com" required>
+      <input type="email" [(ngModel)]="userData.email" name="email" placeholder="email@email.com" required>
     </div>
     <button type="submit">Salvar</button>
   </form>
